Reflects journal version numbering

--- a/RQ2.ipynb
+++ b/RQ2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SINVAD Experiments - Research Question 2 (Indecisiveness)\n",
+    "# SINVAD Experiments - Research Question 2 (Boundary Testing)\n",
     "\n",
     "This notebook provides outlines on experiments performed for RQ2 (Section 5.3 of paper). It contains code that generates results for Figure 6 from our preliminary studies, and Table 3 in the paper. Here we only present the code for MNIST; the principle is similar for FashionMNIST."
    ]
@@ -329,9 +329,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dlenv",
    "language": "python",
-   "name": "python3"
+   "name": "dlenv"
   },
   "language_info": {
    "codemirror_mode": {
